Added No HMD Character

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CE35B5BC4416B2DAFAFD6FBAA5E7CA90
 ProjectName=First Person BP Game Template
+bStartInVR=True
 
 [StartupActions]
 bAddPacks=True
