--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,7 +48,16 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Foward/BackWard",Key=MotionController_Left_Thumbstick_Y,Scale=-1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
-+AxisMappings=(AxisName="Left/Right",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="Left/Right",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="Looking left/right",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="Foward/BackWard",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Foward/BackWard",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Left/Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Looking left/right",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="Looking left/right",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="Looking up/down",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="Looking up/down",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="Looking up/down",Key=None,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
