--- a/Zombie.uproject
+++ b/Zombie.uproject
@@ -3,6 +3,13 @@
 	"EngineAssociation": "4.19",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "Zombie",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	],
 	"Plugins": [
 		{
 			"Name": "OpenVRExpansionPlugin",
