Scoring System and Baseline buying weapon system.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,6 +48,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Menu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Menu",Key=MotionController_Left_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Interact",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Interact",Key=MotionController_Right_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Foward/BackWard",Key=MotionController_Left_Thumbstick_Y,Scale=-1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=A,Scale=-1.000000)
