--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/MainMenu2.MainMenu2
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/FirstPersonBP/Blueprints/MultiplayerWidgets/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/FirstPersonBP/Blueprints/MainMenu.MainMenu
+GameDefaultMap=/Game/MainMenu2.MainMenu2
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -83,5 +83,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
