--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MainMenu2.MainMenu2
+EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/FirstPersonBP/Blueprints/MultiplayerWidgets/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/MainMenu2.MainMenu2
+GameDefaultMap=/Game/FirstPersonBP/Blueprints/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -83,3 +83,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
