--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -58,7 +58,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Foward/BackWard",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Foward/BackWard",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="Looking left/right",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="Looking left/right",Key=MotionController_Right_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="Looking up/down",Key=MouseY,Scale=-1.000000)
 +AxisMappings=(AxisName="Looking up/down",Key=None,Scale=1.000000)
 bAlwaysShowTouchInterface=False
