--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Game/FirstPersonBP/Blueprints/MultiplayerWidgets/BP_GameInstance.BP_GameInstance_C
+GameInstanceClass=/Game/FirstPersonBP/Blueprints/MyGameInstance.MyGameInstance_C
 GameDefaultMap=/Game/FirstPersonBP/Blueprints/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
