Changed Weapon System from ground up changed weapon backpack system.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,6 +39,7 @@ DefaultPlatformService=Steam
 [OnlineSubsystemSteam]
 bEnabled=true
 SteamDevAppId=480
+bHasVoiceEnabled=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
@@ -83,5 +84,10 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
++PhysicalSurfaces=(Type=SurfaceType1,Name="Head")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Legs")
++PhysicalSurfaces=(Type=SurfaceType3,Name="LeftArm")
++PhysicalSurfaces=(Type=SurfaceType4,Name="RightArm")
+ [Voice] 
+ bEnabled=true
 
