--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,6 @@ bStartInVR=True
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+ [/Script/Engine.GameSession]
+ bRequiresPushToTalk=false
