--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,11 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CE35B5BC4416B2DAFAFD6FBAA5E7CA90
-ProjectName=First Person BP Game Template
-bStartInVR=True
+ProjectName=Yuck.Elite.Elimination.Team
+bStartInVR=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 
  [/Script/Engine.GameSession]
- bRequiresPushToTalk=false
+ bRequiresPushToTalk=true
