--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -53,6 +53,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Sprint",Key=MotionController_Left_Thumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=MotionController_Left_Thumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="VoiceChat",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Build",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Remove/ADS",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Swap Building Item",Key=MiddleMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Foward/BackWard",Key=MotionController_Left_Thumbstick_Y,Scale=-1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
 +AxisMappings=(AxisName="Left/Right",Key=A,Scale=-1.000000)
