--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,8 @@
 ProjectID=CE35B5BC4416B2DAFAFD6FBAA5E7CA90
 ProjectName=Yuck.Elite.Elimination.Team
 bStartInVR=False
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CD9A718C48975E74FF6846A0770A9B86", "Y.E.E.T")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "B1302ED34328BD2B646C75BC7AF6099A", "Y.E.E.T")
 
 [StartupActions]
 bAddPacks=True
@@ -9,3 +11,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 
  [/Script/Engine.GameSession]
  bRequiresPushToTalk=true
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+UsePakFile=True
+
